 (Format: Year/Month/Day)
Changes for 1.0rc3:
*07/01/15:
   * Fix rootmenu disappearing on reconfigure (Mark)
     Screen.cc
*07/01/14:
   * Stay on the same workspace after a restart (Mark)
     Screen.cc
   * Properly 'properly fix' shaded and stuck windows on restart -- i.e. allow
     windows to deiconify themselves the rest of the time (Mark)
     Window.cc
   * Several changes for background style option: (Mark)
     - now support `background: mod' to coincide with fbsetroot -mod --
       In addition to `background.color' and `background.colorTo', this option
       must also set `background.modX' and `background.modY' to integers
     - added `background: none' for styles that do not include a background
     - fixed bug with style backgrounds not getting set when changing styles
     - updated default styles to be valid wrt background options
     RootTheme.cc/hh Screen.cc FbTk/Theme.hh
   * Minor fix for window cycling on multiple screens (Mark)
     fluxbox.cc
*07/01/13:
   * Only change focus order when user specifically focuses a window (Mark)
     Screen.cc Window.cc FocusControl.cc/hh
*07/01/11:
   * Added option to :Minimize key command to lower all windows in the same
     layer as the focused window -- syntax is `:Minimize (layer)' (Mark)
     FbCommandFactory.cc WorkspaceCmd.cc/hh
*07/01/08:
   * Fix another 64-bit window property (Mark/Simon)
     FbTk/FbWindow.cc
*07/01/07:
   * Update Iconbar Mode menu when updating settings (Mark)
     IconbarTool.cc
   * Fixed workspace warping going crazy, bug #1467124 (Mark)
     Window.cc
   * Fix little bug with iconbar rendering, bug #1549209 (Mark)
     IconbarTool.cc
   * Fix RefCount crash and Slit deconstruction ordering (Simon)
     RefCount.hh Slit.hh/cc
   * Support per-window transparency settings.
      (Simon and thanks Julien Trolet, dmxen at sourceforge dot net)
       sf.net patch #1511042, feature #1108692
      - new "Transparency" menu in the window menu
      - new apps file attribute: 